objects/ASI_CRM_POS_Data__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>POS Data</relationshipLabel>
        <relationshipName>POS_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>POS Data</relationshipLabel>
        <relationshipName>POS_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Month_End_Date__c</fullName>
        <label>Month End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_POS_Btl__c</fullName>
        <label>POS (Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>POS Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Month_End_Date__c</columns>
        <columns>ASI_CRM_Item_Group__c</columns>
        <columns>ASI_CRM_POS_Btl__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>zh_CN</language>
    </listViews>
    <nameField>
        <displayFormat>POS-{00000000}</displayFormat>
        <label>POS ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Data</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_POS_Data</fullName>
        <active>true</active>
        <label>CN POS Data</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>